:rocket: Finish the page

--- a/index.html
+++ b/index.html
@@ -4,11 +4,84 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Great+Vibes&amp;display=swap" rel="stylesheet">
+        <!-- font-awesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
         <title>Q/A</title>
     </head>
     <body>
         <section>
-            <h1>Perguntas Gerais</h1>
+            <div class="title">
+                <h2>Perguntas Gerais</h2>
+            </div>
+
+            <section class="principal-section">
+                <!-- GOSTA DE BOLO? -->
+                <div class="quest">
+                    <div class="quest-title">
+                        <p>Você gosta de bolo?</p>
+                        <div class="btn-quest">
+                            <span class="plus-icon">
+                                <i class="far fa-plus-square"></i>
+                            </span>
+                            <span class="minus-icon">
+                                <i class="far fa-minus-square"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="quest-text">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                            dolore illo dolores quia nemo doloribus quaerat, magni numquam
+                            repellat reprehenderit.
+                        </p>
+                    </div>
+                </div>
+                <!-- TUBAROES -->
+                <div class="quest">
+                    <div class="quest-title">
+                        <p>Você ja surfou com tubarões?</p>
+                        <div class="btn-quest">
+                            <span class="plus-icon">
+                                <i class="far fa-plus-square"></i>
+                            </span>
+                            <span class="minus-icon">
+                                <i class="far fa-minus-square"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="quest-text">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                            dolore illo dolores quia nemo doloribus quaerat, magni numquam
+                            repellat reprehenderit.
+                        </p>
+                    </div>
+                </div >
+                <!-- MORTAIS CARPADOS -->
+                <div class="quest">
+                    <div class="quest-title">
+                        <p>Você já deu três mortais carpados?</p>
+                        <div class="btn-quest">
+                            <span class="plus-icon">
+                                <i class="far fa-plus-square"></i>
+                            </span>
+                            <span class="minus-icon">
+                                <i class="far fa-minus-square"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="quest-text">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                            dolore illo dolores quia nemo doloribus quaerat, magni numquam
+                            repellat reprehenderit.
+                        </p>
+                    </div>
+                </div>
+            </section>
         </section>
+        <script src="app.js"></script>
     </body>
 </html>
